k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops-app
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: backend
          image: yahaligottlieb/devops-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          # תוקן: הגדרה פרטנית של משתנים בלבד, כדי למנוע זליגת הרשאות AWS לפוד של ה-Backend
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          securityContext:
            allowPrivilegeEscalation: false
          startupProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devops-app
spec:
  selector:
    app: backend
  ports:
    - name: http  # <--- השורה הזו התווספה
      protocol: TCP
      port: 5001
      targetPort: 5001
